# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://packaging.python.org/en/latest/guides/distributing-packages-using-setuptools/#setup-cfg

[metadata]
name = ipldstore
author = Tobias Kölling
author_email = tobias.koelling@mpimet.mpg.de
description = Zarr storage backend for IPLD
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/d70-t/ipldstore
project_urls =
    Bug Tracker = https://github.com/d70-t/ipldstore/issues
# see https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
    Natural Language :: English
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.7
install_requires =
    typing-extensions
    typing-validation
    multiformats
    dag-cbor >= 0.2.2
    pure-protobuf >= 2.1.0
    numcodecs
    requests

[options.package_data]
* = py.typed, *.json

[options.packages.find]
exclude = test

[options.extras_require]
dev =
    zarr
    mypy
    pylint
    pytest
    pytest-cov

[flake8]
max-line-length = 160
